Add bosh-lite manifest and prepare to run on new bosh-lite

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
-.blobs/
+config/dev.yml
 config/private.yml
+releases/*.tgz
+dev_releases
+blobs
+.blobs
+.dev_builds
+.idea
+.final_builds/jobs/**/*.tgz
+.final_builds/packages/**/*.tgz
+releases/**/*.tgz
+.DS_Store
+*.swp
+*~
+*#
+#*
+pkg/
+
