--- a/config/blobs.yml
+++ b/config/blobs.yml
@@ -4,4 +4,5 @@ influxdb/influxdb-1.1.1_linux_amd64.tar.gz:
   sha: a78ab377f05dd3ddcac295ce49ada471294e8427
 influxdb/influxdb-1.4.3_linux_amd64.tar.gz:
   size: 20787393
+  object_id: d795cf56-112f-4bb6-61df-5274b9b36f3f
   sha: b0c1411b90dff90ed275f30310fedf7db3849184
