--- a/.final_builds/jobs/influxdb/index.yml
+++ b/.final_builds/jobs/influxdb/index.yml
@@ -3,4 +3,8 @@ builds:
     version: b65c38855b7783e56ce987c0d140a38c284f4393
     blobstore_id: 371a806d-4dc9-4177-59a1-e3cebad2f922
     sha1: 92be8bd25e29345ede452cdc918e2e3d86547ed0
+  d5f5281e1144089f8f45092479e1a1642cce041b:
+    version: d5f5281e1144089f8f45092479e1a1642cce041b
+    blobstore_id: 46bbf35a-cde6-4562-5e7c-ef30328c1b9e
+    sha1: f00f221e4d720677d5a85114aed4a66f17dee38c
 format-version: "2"
