--- a/manifests/influxdb.yml
+++ b/manifests/influxdb.yml
@@ -3,7 +3,7 @@ name: influxdb
 
 releases:
 - name: influxdb
-  version: 2
+  version: latest
   url: git+https://github.com/cloudfoundry-community/influxdb-boshrelease
 
 stemcells:
