--- a/.final_builds/jobs/influxdb/index.yml
+++ b/.final_builds/jobs/influxdb/index.yml
@@ -1,4 +1,8 @@
 builds:
+  984503f78a9cb46db2425ffc0f156b8e370a5820:
+    version: 984503f78a9cb46db2425ffc0f156b8e370a5820
+    blobstore_id: 7056cde9-8bba-4752-63aa-8a0d5af4181c
+    sha1: d52fae6e8ab9b5dddf975dac9a01867dcbd450d8
   b65c38855b7783e56ce987c0d140a38c284f4393:
     version: b65c38855b7783e56ce987c0d140a38c284f4393
     blobstore_id: 371a806d-4dc9-4177-59a1-e3cebad2f922
