--- a/releases/influxdb/index.yml
+++ b/releases/influxdb/index.yml
@@ -1,4 +1,6 @@
 builds:
+  1a96d6ca-be09-4b5b-752d-21aeb8aed402:
+    version: "3"
   342dd254-77ad-4f0e-559f-fed5beeaa335:
     version: "1"
   96dd53b1-b566-4990-7aa5-a09cfde54b82:
